--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,16 @@
 	"manifest_version":2,
 	"content_scripts":[
 		{
-			"matches":["https://tradeit.gg/*", "https://cs.money/*", "https://dmarket.com/*", "https://skins-table.xyz/*"],
-			"js":["script.js"],
+			"matches":["https://tradeit.gg/*", "https://dmarket.com/*", "https://skins-table.xyz/*"],
+			"js":["content/content.js"],
+			"css":["content/content.css"],
 			"run_at":"document_end"
 		}
 	],
+	"permissions":[
+		"notifications"
+	],
 	"background": {
-		"scripts":["background.js"]
+		"scripts":["background/background.js"]
 	}
 }
