--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,15 @@
 		}
 	],
 	"permissions":[
-		"notifications"
+		"notifications",
+		"storage"
 	],
 	"background": {
 		"scripts":["background/background.js"]
+	},
+	"browser_action":{
+		"default_title":"Help tools",
+		"default_popup":"popup/popup.html"
 	}
+
 }
